<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
...
            app:title="Admin Profile"
            app:titleTextColor="@android:color/white" />

        <!-- Back to Home Button -->

        <Button
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="428dp"
            android:backgroundTint="@color/purple"
            android:text="Home"
            android:textColor="@android:color/white"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <!-- Events Button -->
            <Button
                android:id="@+id/events_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="EVENTS"
                android:backgroundTint="@color/purple"
                android:textColor="@android:color/white"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Users Button -->
            <Button
                android:id="@+id/users_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="USERS"
                android:backgroundTint="@color/purple"
                android:textColor="@android:color/white"
...
                app:layout_constraintTop_toBottomOf="@id/events_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Facilities Button -->
            <Button
                android:id="@+id/facilities_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="FACILITIES"
                android:backgroundTint="@color/purple"
                android:textColor="@android:color/white"
...
                app:layout_constraintTop_toBottomOf="@id/users_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Images Button -->
            <Button
                android:id="@+id/images_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="IMAGES"
                android:backgroundTint="@color/purple"
                android:textColor="@android:color/white"
...
                app:layout_constraintTop_toBottomOf="@id/facilities_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- QRcode Button -->
            <Button
                android:id="@+id/test_page_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Test Page"
                android:backgroundTint="@color/purple"
                android:textColor="@android:color/white"
...
