...

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:id="@+id/admin_view_user_scrollview"
        android:background="@drawable/rounded_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
                    android:background="@drawable/rounded_edittext"
                    android:hint="Username"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_view_deviceID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="Device ID"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/delete_button_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="Delete" />

                    <Button
                        android:id="@+id/cancel_button_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="Cancel" />
                </LinearLayout>
            </LinearLayout>
...
