<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="65dp">

    <ListView
        android:id="@+id/image_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <Button
            android:id="@+id/admin_go_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Admin Page"
            android:layout_weight="1"
            android:backgroundTint="@color/purple"/>

        <Button
            android:id="@+id/remove_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Remove"
            android:layout_weight="1"
            android:backgroundTint="@color/purple"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>